--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -127,7 +127,7 @@
                 Quae in controversiam veniunt, de iis, si placet, disseramus.
               </p>
 
-              <a href="https://www.holbertonschool.com/" target="_blank" rel="noopener">Apparet statim, quae sint officia, quae actiones.</a>
+              <a href="https://www.holbertonschool.com/" target="_blank" rel="noopener noreferrer">Apparet statim, quae sint officia, quae actiones.</a>
 
               <ul>
                 <li>li: Tubulum fuisse, qua illum, cuius is condemnatus est rogatione, P.</li>
